bumping up 0.3.7
